# cubrim

./: .gitignore  CLAUDE.md  CUBR-AUTONOMOUS-STATE.md  CUBR-CONT-STATUS.md  LICENSE
.githooks/: pre-commit
code/: Makefile  README.md
code/addressor/: .gitignore  COMMIT_SHA  Cargo.toml  LICENSE  README.md  deny.toml
code/addressor/scripts/: addr-bloom-effect.sh  addr-catalog-size.sh  addr-cdc-dedup.sh  addr-delta-bench.sh  addr-matrix-cull.sh  addr-no-build-gate.sh  addr-ref-size.sh  addr-regression-proof.sh  addr-roundtrip.sh  addr-section-hit.sh  addr-threshold-test.sh  addr-zstd-gate.sh
code/addressor/scripts/corpus/: extract_git_pairs.sh  generate_1M_keys.sh  generate_36_projects.sh  generate_7class.sh  generate_cdc_dup.sh  generate_dup_fraction_steps.sh  generate_mixed_dup.sh  generate_www_trace.sh
code/addressor/scripts/sync/: ingest-hub.sh  publish-snapshot.sh  pull-snapshot.sh  push-blobs.sh  setup.sh
code/addressor/scripts/sync/deploy/: HUB-DEPLOY.md  authorized_keys.template
code/addressor/src/: bloom.rs  cas.rs  catalog.rs  chunker.rs  delta.rs  error.rs  format.rs  lib.rs  lite.rs  main.rs  matrix.rs  merkle.rs  refs.rs  residual.rs  router.rs
code/addressor/tests/: bloom_effect.rs  cdc_dedup.rs  cubrim_backend.rs  delta_store.rs  format_malformed.rs  fp_confirm.rs  matrix_cull.rs  merkle_optional.rs  ref_and_catalog_scale.rs  regression_proof.rs  roundtrip.rs  section_hit.rs  sync_hub_spoke.rs  threshold.rs
code/addressor/tests/common/: mod.rs
code/cubrim-rs/: Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  MACOS_BUILD.md  PROVENANCE.md
code/cubrim-rs/docs/: cli.md  crypto.md  cubrim-archive-format.md  release.md
code/cubrim-rs/scripts/: build-macos-universal.sh  package-release.sh  smoke-cli.sh
code/cubrim-rs/src/: archive.rs  bitpack.rs  bwt.rs  cli.rs  codec.rs  config.rs  crypto.rs  cube.rs  distance_map.rs  domainize.rs  error.rs  header.rs  huffman.rs  lib.rs  license.rs  main.rs  phi.rs  rle.rs  self_update.rs  tests_traceability.rs
code/cubrim-rs/tests/: cli_archiver.rs  cubr0027_bench.rs  cubr0028_bench.rs  cubr0031_bench.rs  differential.rs
code/cubrim-rs/tests/fixtures/: all_distinct_256.python_blob  all_same_100.python_blob  bwt_entropy_context_log.input  bwt_entropy_context_log.python_blob  bwt_entropy_context_small.input  bwt_entropy_context_small.python_blob  bwt_entropy_context_text.input  bwt_entropy_context_text.python_blob  empty.python_blob  hello_world_test.python_blob  random_1kb.input  random_1kb.python_blob  single_byte.python_blob  sparse_clustered_rlecodes.input  sparse_clustered_rlecodes.python_blob  text_1kb.input  text_1kb.python_blob  text_entropy.python_blob  text_entropy_context.input  text_entropy_context.python_blob
consilium/: _progress-baseline-2026-06-24.md  closed-branches.md  founding-brief.md  free-model-consilium.py  hypothesis-log.md  iteration-brief.template.md  rulebook-v1.md  verdict-synthesis.md
worldbench-archive/: run_std.sh  (+12 more)
(+484 files in other folders)
