[package]
name = "cubrim"
version = "0.1.0-cubr0043"
edition = "2021"
description = "Cubrim archiver — lossless compression library and CLI"
repository = "https://github.com/Arcanada-one/cubrim"
license-file = "LICENSE"
readme = "PROVENANCE.md"
keywords = ["compression", "archiver", "lossless"]
categories = ["compression", "command-line-utilities"]

[[bin]]
name = "cubrim"
path = "src/main.rs"

[lib]
name = "cubrim"
path = "src/lib.rs"

[profile.release]
opt-level = 3
