[package]
name = "cubrim"
version = "0.1.0"
edition = "2021"
description = "Cubrim archiver — lossless compression library and CLI"
repository = "https://github.com/Arcanada-one/cubrim"
license = "MIT"

[[bin]]
name = "cubrim"
path = "src/main.rs"

[lib]
name = "cubrim"
path = "src/lib.rs"

[profile.release]
opt-level = 3

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1.8.5"
clap = { version = "4", features = ["derive"] }
filetime = "0.2.29"
rand = "0.8"
rpassword = "7.5.4"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
