[package]
name = "cubrim"
version = "0.1.0-cubr0043"
edition = "2021"
description = "Cubrim archiver — lossless compression library and CLI"
repository = "https://github.com/Arcanada-one/cubrim"
license-file = "LICENSE"
readme = "PROVENANCE.md"
keywords = ["compression", "archiver", "lossless"]
categories = ["compression", "command-line-utilities"]

[[bin]]
name = "cubrim"
path = "src/main.rs"

[lib]
name = "cubrim"
path = "src/lib.rs"

[profile.release]
opt-level = 3

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1.8.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
filetime = "0.2.29"
hex = "0.4"
rand = "0.8"
rpassword = "7.5.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
